# dianel-backend

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  pom.xml  pyproject.toml
src/main/docker/: Dockerfile  docker-compose.yml
src/main/java/com/dianel/: DianelApplication.java
src/main/java/com/dianel/config/: KeycloakConfig.java  SecurityConfig.java  SwaggerConfig.java
src/main/java/com/dianel/dao/: CargaisonRepository.java  ProduitRepository.java  TransporteurRepository.java  UsineRepository.java
src/main/java/com/dianel/dianel/: DianelApplication.java
src/main/java/com/dianel/dianel/dao/: CargaisonRepository.java  ProduitRepository.java  TransporteurRepository.java  UsineRepository.java
src/main/java/com/dianel/dianel/entity/: Cargaison.java  Produit.java  Transporteur.java  Usine.java
src/main/java/com/dianel/dto/: CargaisonDto.java  ProduitDto.java
src/main/java/com/dianel/entity/: AppUser.java  Cargaison.java  Produit.java  Transporteur.java  Usine.java
src/main/java/com/dianel/services/: CargaisonService.java  ProductService.java  TransporteurService.java  UsineService.java
src/main/java/com/dianel/services/serviceImpl/: CargaisonServiceImpl.java  ProduitServiceImpl.java  (+2 more)
src/main/java/com/dianel/utils/: Constants.java  Messages.java
src/main/java/com/dianel/web/: CargaisonController.java  ProduitController.java  TransporteurController.java  UsineController.java
src/main/resources/: application.properties
src/test/java/com/dianel/: DianelApplicationTests.java
src/test/java/com/dianel/dianel/: DianelApplicationTests.java
(+4 files in other folders)
